@@ -3,6 +3,8 @@
 	* src/plot3d.c (get_3ddata): Ignore blank lines in data file input to
 	"splot with vectors".
 
+	* src/set.c (set_xyzlabel): Allow set label textcolor rgb <foo>.
+
 2005-02-01  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_boxes): Plot with boxerrorbars and three columns
